--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
     <html lang="en">
+    <style>
+body{
+            font-family:"Helvetica Neue", Helvetica, Arial;
+            cursor:no-drop;
+}
+    </style>
      <head>
        <meta charset="utf-8">
     <title>Home</title>
@@ -8,6 +14,9 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="cspperiod4.html">cspperiod4</a>
+    <a href="feelings.html">Feelings</a>
+    <a href="app.html">Our App</a>
+    <a href="watermelon.html">The Single Watermelon</a>
     <h1>This is my test Home Page!</h1>
     <img src="images/home.jpg" height="500">
     <br>
