--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,10 @@
 <!doctype html>
 	<html lang="en">
+    <style>
+body{
+            font-family:"Helvetica Neue", Helvetica, Arial;
+}
+    </style>
 	 <head>
 	   <meta charset="utf-8">
 	<title>Portfolio</title>
@@ -8,6 +13,9 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="cspperiod4.html">cspperiod4</a>
+    <a href="feelings.html">Feelings</a>
+    <a href="app.html">Our App</a>
+    <a href="watermelon.html">The Single Watermelon</a>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
