--- a/app.html
+++ b/app.html
@@ -16,8 +16,9 @@ body{
     <a href="cspperiod4.html">cspperiod4</a>
     <a href="feelings.html">Feelings</a>
     <a href="app.html">Our App</a>
+    <a href="watermelon.html">The Single Watermelon</a>
     <center><h1><span style="color: #33FF36;cursor:no-drop">This is the app we made!</span></h1>
-    <a href="app/Water_balloon_boy.aia">APP</a>
+    <a href="app/Water_balloon_boy.aia">APP</a></center>
    
     <br>
     
