--- a/app.html
+++ b/app.html
@@ -1,7 +1,7 @@
 <!doctype html>
     <html lang="en">
     <style>
-body{
+body{text-align:center;
             font-family:"Helvetica Neue", Helvetica, Arial;
             cursor:no-drop;
 }
@@ -17,8 +17,11 @@ body{
     <a href="feelings.html">Feelings</a>
     <a href="app.html">Our App</a>
     <a href="watermelon.html">The Single Watermelon</a>
+    <a href="snake.html">Snake</a>
     <center><h1><span style="color: #33FF36;cursor:no-drop">This is the app we made!</span></h1>
     <a href="app/Water_balloon_boy.aia">APP</a></center>
+    <p></p>
+    <center><img src="images/OURAPP.png"></center>
    
     <br>
     
