--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 	<html lang="en">
     <style>
-body{
+body{text-align:center;
             font-family:"Helvetica Neue", Helvetica, Arial;
 }
     </style>
@@ -16,6 +16,7 @@ body{
     <a href="feelings.html">Feelings</a>
     <a href="app.html">Our App</a>
     <a href="watermelon.html">The Single Watermelon</a>
+    <a href="snake.html">Snake</a>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
