--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
     <html lang="en">
     <style>
-body{
+body{text-align:center;
             font-family:"Helvetica Neue", Helvetica, Arial;
             cursor:no-drop;
 }
@@ -17,6 +17,7 @@ body{
     <a href="feelings.html">Feelings</a>
     <a href="app.html">Our App</a>
     <a href="watermelon.html">The Single Watermelon</a>
+    <a href="snake.html">Snake</a>
     <h1>This is my test Home Page!</h1>
     <img src="images/home.jpg" height="500">
     <br>
