--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,18 @@
 body{text-align:center;
             font-family:"Helvetica Neue", Helvetica, Arial;
 }
-    </style>
+a:visited {
+    color: #FF3737;
+}
+
+a:link {
+    color: #FF6437;
+}
+
+a:visited {
+    color: #FF3737;
+}       
+</style>
 	 <head>
 	   <meta charset="utf-8">
 	<title>Portfolio</title>
