--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@ body{text-align:center;
             font-family:"Helvetica Neue", Helvetica, Arial;
             cursor:no-drop;
 }
+a:visited {
+    color: #FF3737;
+}
+
+a:link {
+    color: #FF3737;
+}
+
+a:visited {
+    color: #FF3737;
+}   
     </style>
      <head>
        <meta charset="utf-8">
