--- a/app.html
+++ b/app.html
@@ -21,7 +21,7 @@ body{text-align:center;
     <center><h1><span style="color: #33FF36;cursor:no-drop">This is the app we made!</span></h1>
     <a href="app/Water_balloon_boy.aia">APP</a></center>
     <p></p>
-    <center><img src="images/OURAPP.png"></center>
+    <center><img src="Images/OURAPP.png"></center>
    
     <br>
     
