--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ a:visited {
     <a href="watermelon.html">The Single Watermelon</a>
     <a href="snake.html">Snake</a>
     <h1>This is my test Home Page!</h1>
-    <img src="images/home.jpg" height="500">
+    <img src="Images/home.jpg" height="500">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+      <img src="Images/scratchlogo.png" height="100">
     </a>
       </body>
     </html>
