--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@ a:visited {
     <a href="watermelon.html">The Single Watermelon</a>
     <a href="snake.html">Snake</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="Images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+      <img src="Images/scratchlogo.png" height="100">
     </a>
 	  </body>
 	</html>
